Update 1 to index.html

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
                         <!-- Question block -->
                         <div class="question-block">
-                            <p class="w-75 fw-bold">Q1:Input Validation question here</p>
+                            <p class="w-75 fw-bold">Q1:The question would normally go here, about input validation, or any topic, but this is a freebie, enjoy!</p>
                             <div class="row">
                                 <div class="col-sm-6">
                                     <a href="#!" class="block-link" flag="ASV{Y0u_4R3_Luck4y}" >
