Update 2 to index.html

--- a/index.html
+++ b/index.html
@@ -105,13 +105,12 @@ Displaying a text box informing the user that only numeric values should be used
                 </div>
                 <div class="card-body">
                     <p class="w-75">
-                        Unsafe deserialization of un-trusted data, such as that provided by the user, can lead to arbitrary code execution.<br/>Select the code block that handles un-trusted data in a safe manner.
-                    </p>
+                        Unsafe deserialization of un-trusted data, such as that provided by the user, can lead to arbitrary code execution. </p>
                     <hr>
 
                         <!-- Question block -->
                         <div class="question-block">
-                            <p class="w-75 fw-bold">Q2: Question here</p>
+                            <p class="w-75 fw-bold">Q2: Which code block handles un-trusted data in a safe manner.</p>
                             <div class="row">
                                 <div class="col-sm-6">
                                     <a href="#!" class="block-link" flag="ASV{th4nk_y0u_4_pl4y1nG}" >
