Small update to one of the flags
One of the flags was found with a spelling error in the test run. this was just an update to it.

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ if (isset($_POST['counter'])) {
                                     </a>
                                 </div>
                                 <div class="col-sm-6 mr-3">
-                                    <a href="#!" class="block-link" flag="ASV{D0_1_W4nnn4Kn0w}~">
+                                    <a href="#!" class="block-link" flag="ASV{D0_1_W4nnn4Kn0w}">
                                         <div>
                                             <pre>
                                                 <code class="php">
