Updated definition and removed info
Removed any possible leaked info, and updated a description that somehow didn't get updated in the final push on the private repo.

--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@ admin@kali:/adminfolder$
                 </div>
                 <div class="card-body">
                     <p class="w-75">
-                        Database security info (SQLi can apply here) Answer 1 is correct.
+                        Database security is important in web application security. Databases have a wide range of information that can leak user data, confidential information and more. Threat actors may use this data to harm your company, users and possibly cost you money. In this example we are using SQL. SQL is designed for managing data held in a relational database management system (RDBMS), or for stream processing in a relational data stream management system (RDSMS). It is particularly useful in handling structured data, i.e. data incorporating relations among entities and variables.
                     </p>
                     <hr>
 
