Updated another description
Just added more information to one of the questions.

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ def index():
                 </div>
                 <div class="card-body">
                     <p class="w-75">
-                      Generic error codes are used all over the web; This makes it unaversally understood what, and where, something went wrong in case of an error.
+                      Generic error codes are used all over the web; This makes it unaversally understood what, and where, something went wrong in case of an error. It is a good practice to give as little information as possible in an error code to prevent any threat actors from using this information in their recon to their advantage. For example, if a threat actor can fuzz for different pages, and see which pages exist and don't exist via HTTP error codes, this could be harmful to your application.
                     </p>
                     <hr>
 
