Yet another description update
Just tweaking some things to give better details.

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ $GLOBALS["total_counter"] += intval($_POST['counter'])
                 </div>
                 <div class="card-body">
                     <p class="w-75">
-                        Cross-Site Request Forgery Prevention, or CSRF prevention, is ensuring that incoming requests originate from the user's action on your website, and not from a malicious third-praty site your user happens to browse.
+                        Cross-Site Request Forgery Prevention, or CSRF prevention, is ensuring that incoming requests originate from the user's action on your website, and not from a malicious third-praty site your user happens to browse. There are many ways in which a malicious website can transmit such commands; specially-crafted image tags, hidden forms, and JavaScript XMLHttpRequests. It is the attacker's end goal to cause a victim to unknowingly submit a malicious web request to a website that the victim has privileged access to, and allows unauthenticated users to preform actions that would normally be allowed to only authenticated users with certain privileges.
                     </p>
                     <hr>
 
