--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ Displaying a text box informing the user that only numeric values should be used
                 </div>
                 <div class="card-body">
                     <p class="w-75">
-                        Unsafe deserialization of un-trusted data, such as that provided by the user, can lead to arbitrary code execution. </p>
+                       Serialization is the process of turning an object into a data format or byte stream that can be restored at a later time. Deserialization takes this serialized data and transforms it back into a data object. Unsafe deserialization of un-trusted data, such as that provided by the user, can lead to arbitrary code execution. This could then be used as an entry point into a system, and is bad news for you.  </p>
                     <hr>
 
                         <!-- Question block -->
