--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ def index():
                 </div>
                 <div class="card-body">
                     <p class="w-75">
-                        Encoding user data when outputting it prevents attacks such as cross site scripting.
+                        Encoding user data when outputting it prevents attacks such as cross site scripting. Protecting from XSS attacks requires developers to consider how data is being displayed on a page. If the data could come from a user’s input in any way (including through the site’s URL), then correct encoding of the output has to be considered.
                     </p>
                     <hr>
 
